--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,12 @@ threadsafe: true
 api_version: 1
 
 handlers:
+- url: /stylesheets
+  static_dir: stylesheets
+  
 - url: .*
   script: main.app
+
 
 libraries:
 - name: jinja2
